# TaskListAgent

./: README.md  pyproject.toml  render.yaml  report.md  requirements.txt  start.sh
docs/: commands.txt
knowledge/: examples.txt
src/api/: main.py
src/api/auth/: jwt_handler.py
src/api/common/: logger.py
src/api/routes/: chat_routes.py
src/api/services/: crew_service.py
src/client/: main.html
src/tasklist_agent_crew_ai/: crew.py  main.py
src/tasklist_agent_crew_ai/callback_handler/: agent_switch_handler.py
src/tasklist_agent_crew_ai/config/: agents.yaml  tasks.yaml
src/tasklist_agent_crew_ai/tools/: human_interacton_tool.py  tavity_search_tool.py
